v3.5.1 (XXXX-XX-XX)
-------------------

* Made the mechanism in the Web UI of replacing and upgrading a foxx app more clear.

* Fixed the AQL sort-limit optimization which was applied in some cases it should
  not, resulting in undefined behaviour.

* Add --server.statistics-history flag to allow disabling of only the historical
  statistics.  Also added rocksdbengine.write.amplification.x100 statistics
  for measurement of compaction option impact.  Enabled non-historical
  statistics for agents.

* Fixed AQL constrained-heap sort in conjunction with fullCount.

* Added support for AQL expressions such as `a NOT LIKE b`, `a NOT =~ b` and
  `a NOT !~ b`. Previous versions of ArangoDB did not support these expressions,
  and using them in an AQL query resulted in a parse error.

* Disallow creation of TTL indexes on sub-attributes.

  Creation of such indexes was not caught before, but the resulting 
  indexes were defunct. From now on the creation of TTL indexes on sub-
  attributes is disallowed.

* Added HotBackup feature.

* Improved database creation within the cluster. In the case of
  coordinator outages during the creation of the database there was a
  chance that not all relevant system collections had been created.
  Although this database was accessible now some features did not work
  as expected (e.g. creation of graphs). We modified creation of a new
  database as an all or nothing operation and only allow access to the
  database after all system collections are properly perpared to avoid
  the above inconsistencies. Also creation of databases are now secured
  against coordinator outages, they will either be fully created or not
  visible and eventually dropped. This does not require any change on the
  client code.

* Added UI support to create documents in a collection using smartGraphAttribute
  and/or smartJoinAttribute.
  
* Add count of objects to latency reporting in arangoimport.
