@@ -1,6 +1,9 @@
 v3.5.1 (XXXX-XX-XX)
 -------------------
 
+* Fixed "ArangoDB is not running in cluster mode" errors in active failover setups.
+  This affected at least /_admin/cluster/health.
+
 * Made the mechanism in the Web UI of replacing and upgrading a foxx app more clear.
 
 * Fixed the AQL sort-limit optimization which was applied in some cases it should
